# V2-Engine

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
config/: v2_cli.json  v2_main.json  v2_tui.json
docs/: dbus_design.md
docs/architecture/: mailbox_comparison.md
docs/benchmark/: README.md  analysis.md  backpressure.md  contention.md  latency.md  scaling.md  scheduler.md  throughput.md
docs/plans/: phase1_benchmark.md  phase2_improvements.md  phase3_measurement.md  phase4_documentation.md  phase5_portfolio.md  portfolio_plan.md  roadmap.md
docs/portfolio/: phase1_mailbox.md  phase2_benchmark.md  phase3_measurement.md  phase4_documentation.md  phase5_portfolio.md  portfolio_plan.md
src/app/: app.cmake
src/app/cli/: cli_app.cpp  cli_app.hpp  main.cpp
src/app/demo/: demo_app.cpp  demo_app.hpp  main.cpp
src/app/main/: main.cpp  main_app.cpp  main_app.hpp
src/app/tui/: main.cpp  render_util.cpp  render_util.hpp  tui_app.cpp  tui_app.hpp
src/app/tui/widgets/: footer.cpp  footer.hpp  header.cpp  header.hpp  pmu_panel.cpp  pmu_panel.hpp  system_panel.cpp  system_panel.hpp
src/app/tui/widgets/actor_list/: actor_list.cpp  actor_list.hpp
src/core/: core.cmake
src/core/actor/: actor.cpp  actor.hpp  mailbox.hpp  message.hpp
src/core/actor_system/: actor_system.cpp  actor_system.hpp  scheduler.cpp  scheduler.hpp
src/core/actor_system/actor/: actor.cpp  actor.hpp  actor_context.cpp  actor_context.hpp  actor_handle.cpp  actor_handle.hpp  actor_registry.cpp  actor_registry.hpp  actor_runtime.cpp  actor_runtime.hpp  i_actor_registry.hpp  message.hpp
src/core/actor_system/messages/: cmd_messages.hpp  dbus_messages.hpp  device_manager_messages.hpp  ipc_messages.hpp  message.hpp  monitor_messages.hpp  network_manager.hpp  network_messages.hpp  pmu_messages.hpp  system_messages.hpp  tick_messages.hpp  timer_messages.hpp
src/core/actor_system/messages/network_manager/: network_manager_messages.hpp  wifi_messages.hpp
src/core/actor_system/runtime/: actor_context.cpp  actor_context.hpp  actor_registry.cpp  actor_registry.hpp  actor_runtime.cpp  actor_runtime.hpp  dispatcher.cpp  dispatcher.hpp  i_actor_registry.hpp  i_actor_runtime.hpp  i_mailbox.hpp  i_scheduler.hpp  mailbox.hpp  mailbox_lockfree.hpp  mailbox_mutex.hpp  scheduler.cpp  scheduler.hpp  worker.cpp  worker.hpp
src/core/common/: config.h  debug.hpp  epoll.cpp  epoll.hpp  log.cpp  log.hpp  return.hpp  ring_buffer.cpp  ring_buffer.hpp  runtime_config.cpp  semaphore.hpp  sleep.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
src/core/common/config/: platform_config.h  runtime_config.cpp  runtime_config.h
src/core/common/container/: lock_free_mpsc_queue.hpp  ring_buffer.cpp  ring_buffer.hpp
src/core/common/log/: log.cpp  log.hpp
src/core/common/os/: epoll.cpp  epoll.hpp  semaphore.hpp  signal_handler.cpp  signal_handler.hpp
src/core/common/time/: time.cpp  time.hpp  timer.cpp  timer.hpp
src/core/common/util/: debug.hpp
src/core/osal/lock_guard/: lock_guard.hpp
src/core/osal/mutex/: mutex.cpp  mutex.hpp
src/core/osal/semaphore/: semaphore.cpp  semaphore.hpp
src/core/osal/sleep/: sleep.cpp  sleep.hpp
src/core/osal/thread/: thread.cpp  thread.hpp
src/core/osal/timer/: timer.cpp  timer.hpp
src/core/perf/: metrics.cpp
src/core/perf/benchmark/: bench_backpressure.cpp  bench_backpressure.hpp  bench_contention.cpp  bench_contention.hpp  bench_latency.cpp  bench_latency.hpp  bench_scaling.cpp  bench_scaling.hpp  bench_scheduler.cpp  bench_scheduler.hpp  bench_throughput.cpp  bench_throughput.hpp  benchmark.cpp  benchmark.hpp  i_benchmark.hpp
src/core/perf/metrics/: metrics.hpp
src/core/runtime/: dispatcher.cpp  dispatcher.hpp  scheduler.cpp  scheduler.hpp
src/infra/: infra.cmake
src/infra/hal/i2c/: i2c_linux.cpp  i2c_linux.hpp  i_i2c.hpp
src/infra/hal/pmu/: i_pmu.hpp  pmu_mock.hpp  pmu_rsp5.cpp  pmu_rsp5.hpp
src/infra/hal/sys/: i_sys.hpp  sys_linux.cpp  sys_linux.hpp  sys_mock.hpp
src/infra/transport/uds/: uds_client.cpp  uds_client.hpp  uds_server.cpp  uds_server.hpp
src/platform/: platform.cmake
src/platform/osal/: mutex.hpp  semaphore.hpp
src/platform/osal/lock_guard/: lock_guard.hpp
src/platform/osal/mutex/: mutex.cpp  mutex.hpp
src/platform/osal/semaphore/: semaphore.cpp  semaphore.hpp
src/platform/osal/sleep/: sleep.cpp  sleep.hpp
src/platform/osal/thread/: thread.cpp  thread.hpp
src/platform/osal/timer/: timer.cpp  timer.hpp
src/runtime/: dispatcher.cpp  dispatcher.hpp  runtime.cmake  scheduler.cpp  scheduler.hpp
src/service/: dummy.cpp  service.cmake
src/service/cmd/: cmd_actor.cpp  cmd_actor.hpp
src/service/dbus/: dbus_actor.cpp  dbus_actor.hpp  dbus_client_handler.cpp  dbus_client_handler.hpp  dbus_server_handler.cpp  dbus_server_handler.hpp
src/service/device_manager/: device_manager_actor.cpp  device_manager_actor.hpp
src/service/ipc/: ipc_server_actor.cpp  ipc_server_actor.hpp
src/service/monitor/: monitor_actor.cpp  monitor_actor.hpp  monitor_data.cpp  monitor_data.hpp
src/service/network_manager/: network_manager.cpp  network_manager.hpp  network_manager_actor.cpp  network_manager_actor.hpp  wifi_handler.cpp  wifi_handler.hpp
src/service/pmu/: pmu_actor.cpp  pmu_actor.hpp
src/service/system/: system_actor.cpp  system_actor.hpp
src/service/tick/: tick_actor.cpp  tick_actor.hpp
test/: CMakeLists.txt
test/benchmark/: benchmark.cmake
test/benchmark/core/: bench_all_runner.cpp  mailbox_bench.cpp  mailbox_multithread_bench.cpp  ring_buffer_bench.cpp  timer_bench.cpp
test/integration/: integration_test.cmake
test/integration/core/: test_actor_system_integration.cpp  test_timer_pipeline.cpp
test/unit/: unit_test.cmake
test/unit/core/: core_test.cmake  test_actor.cpp  test_actor_context.cpp  test_actor_registry.cpp  test_actor_runtime.cpp  test_actor_system.cpp  test_dispatcher.cpp  test_event_loop_epoll.cpp  test_mailbox.cpp  test_mpsc_queue.cpp  test_ring_buffer.cpp  test_scheduler.cpp  test_timer.cpp  test_work_dispatcher.cpp  test_worker.cpp
workspace/: V2_Engine.code-workspace
(+10 files in other folders)
